added webview plugin for forgot password | fixed problems around an item being deleted

--- a/native/platforms/android/app/src/main/res/xml/config.xml
+++ b/native/platforms/android/app/src/main/res/xml/config.xml
@@ -18,6 +18,9 @@
         <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
         <param name="onload" value="true" />
     </feature>
+    <feature name="InAppBrowser">
+        <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser" />
+    </feature>
     <name>Retain</name>
     <description>
         Keep track of items on your boat, house, office, and more.
