--- a/native/platforms/android/app/src/main/res/xml/config.xml
+++ b/native/platforms/android/app/src/main/res/xml/config.xml
@@ -21,6 +21,10 @@
     <feature name="InAppBrowser">
         <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser" />
     </feature>
+    <feature name="SplashScreen">
+        <param name="android-package" value="org.apache.cordova.splashscreen.SplashScreen" />
+        <param name="onload" value="true" />
+    </feature>
     <name>Retain</name>
     <description>
         Keep track of items on your boat, house, office, and more.
@@ -38,5 +42,18 @@
     <access origin="http://3ee.com" />
     <access origin="*" />
     <allow-intent href="market:*" />
+    <splash density="land-hdpi" src="res/screen/android/drawable-land-hdpi/screen.png" />
+    <splash density="land-ldpi" src="res/screen/android/drawable-land-ldpi/screen.png" />
+    <splash density="land-mdpi" src="res/screen/android/drawable-land-mdpi/screen.png" />
+    <splash density="land-xhdpi" src="res/screen/android/drawable-land-xhdpi/screen.png" />
+    <splash density="land-xxhdpi" src="res/screen/android/drawable-land-xxhdpi/screen.png" />
+    <splash density="land-xxxhdpi" src="res/screen/android/drawable-land-xxxhdpi/screen.png" />
+    <splash density="port-hdpi" src="res/screen/android/drawable-port-hdpi/screen.png" />
+    <splash density="port-ldpi" src="res/screen/android/drawable-port-ldpi/screen.png" />
+    <splash density="port-mdpi" src="res/screen/android/drawable-port-mdpi/screen.png" />
+    <splash density="port-xhdpi" src="res/screen/android/drawable-port-xhdpi/screen.png" />
+    <splash density="port-xxhdpi" src="res/screen/android/drawable-port-xxhdpi/screen.png" />
+    <splash density="port-xxxhdpi" src="res/screen/android/drawable-port-xxxhdpi/screen.png" />
     <preference name="loglevel" value="DEBUG" />
+    <preference name="SplashScreenDelay" value="3000" />
 </widget>
